--- a/barcode.html
+++ b/barcode.html
@@ -48,7 +48,7 @@
   <p>レジまたは端末でバーコードをご提示ください。</p>
   <img src="https://barcode.tec-it.com/barcode.ashx?data=FE-8000YEN-0627&code=Code128&translate-esc=false" alt="バーコード">
   <div class="note">支払い期限：2025年6月27日（金）</div>
-  <button onclick="location.href='complete.html'">支払い完了として進む</button>
+  <button onclick="location.href='compleat.html'">支払い完了として進む</button>
 </div>
 
 </body>
