--- a/complete.html
+++ b/complete.html
@@ -59,7 +59,8 @@
     <p><strong>氏名：</strong> 田中啓斗</p>
     <p><strong>支払い金額：</strong> 8,000円（税込）</p>
     <p><strong>支払い方法：</strong> コンビニ支払い</p>
-    <p><strong>支払い日：</strong> 2025年6月26日（想定）</p>
+    <p><strong>支払い日：</strong> 2025年6月27日</p>
+    <p><strong>受験予定日</strong> 2025年7月26日</p>
   </div>
 
   <button class="btn" onclick="location.href='index.html'">マイページに戻る</button>
